src/styles/style.css
.root{
    -fx-background-color :   #0e2a3a;
}


.o_selected_board-btn{
    -fx-background-image: url("../images/o.png");
    -fx-opacity: 1

}
.x_selected_board-btn{
    -fx-background-image: url("../images/x.png");
    -fx-opacity: 1
}

.o_unselected_board-btn{
    -fx-background-image: url("../images/o.png");
    -fx-opacity: .2
}
.x_unselected_board-btn{
    -fx-background-image: url("../images/x.png");
    -fx-opacity: .2
}

.board-btn{
    -fx-background-size: cover;
    -fx-background-color: transparent;
    /*-fx-effect: dropshadow(three-pass-box, #666666, 0, 0, 1, 1);*/
}

.entry-btn
{
    -fx-background-color :   #4856cf;
    -fx-background-radius :  20;
}
.entry-btn:hover
{
    -fx-background-color : #538bd9 ;
    -fx-background-radius :  20;
}
.entry-btn:pressed
{
    -fx-background-color : #3e97db ;
    -fx-background-radius :  20;
}
.WelcomePagePaneclass
{
    -fx-background-image:url("../images/WelcomePageBackground.jpg");
    -fx-background-size: cover;
}
.ipBtn
{
    -fx-background-image:url("../images/ip.png");
    -fx-background-size: cover;

}


.welcomePageCloseButtonClass
{
    -fx-background-color: #46cbfe;
}
.signInBack
{
    -fx-background-image:url("../images/signInBG3.jpg");
    -fx-background-size: cover;
}
.inputfields
{
    -fx-background-color: #0b1324;
    -fx-border-color: #21f9fb;
    -fx-text-fill:#21f9fb;
    -fx-border-radius :20;
    -fx-background-radius:20;
}
.specialButtons
{
    -fx-border-radius: 25px;
    -fx-border-color: #21f9fb;
    -fx-background-color: transparent;
    -fx-border-width: 2px;
    -fx-text-fill:#21f9fb;
    -fx-cursor: hand;
    -fx-font-size: 14px;
    -fx-background-radius: 20;
}
.specialButtons:hover
{
    -fx-background-color: #242424;
}

.specialButtons:selected
{
    -fx-background-color: #242424;
}

.leaderBoard
{
    -fx-background-color: #363350;
    -fx-border-radius: 25px;
    -fx-border-width: 2px;
    -fx-border-color: #21f9fb;

}
.scrollPane
{
    -fx-background: inherit; 
    /* -fx-background: #4856cf; */
    -fx-border-radius: 25px;
    -fx-border-width: 2px;
    -fx-border-color: #21f9fb;
}
.LeaderScrollVBox
{
    -fx-background: transparent; 

}
.text-area {
    -fx-background-color: #363350;
    text-area-background:  #2d2a40 ;


}


.toggle_button
{
    -fx-border-radius: 25px;
    -fx-border-color: #21f9fb;
    -fx-background-color: transparent;
    -fx-border-width: 2px;
    -fx-text-fill:#21f9fb;
    -fx-cursor: hand;
    -fx-font-size: 14px;
    -fx-background-radius: 20;
}


.toggle_button:selected
{
    -fx-background-color: #242424;
}

